--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.22.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.dyn4j</groupId>
+            <artifactId>dyn4j</artifactId>
+            <version>4.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
